# schani_processor

./: .env.example  .env.testing  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  convert.sh
src/: error.rs  image_recognition.rs  lib.rs  main.rs  rawtherapee.rs  store.rs
src/queue/: client.rs  mod.rs
src/service/: mod.rs  processor.rs  store.rs
