[package]
name = "schani_processor"
version = "0.2.0"
authors = ["Christoph Wurst <christoph@winzerhof-wurst.at>"]

[dependencies]
dotenv = "0.10.1"
env_logger = "0.4.3"
futures = "0.1.17"
hyper = "^0.11"
lapin-async = "*"
lapin-futures = "0.10.0"
log = "0.3.8"
resolve = "0.1.2"
schani_library_client = { path = "../schani_library_client" }
schani_store_client = { path = "../schani_store_client" }
temporary = "0.6.3"
tokio-core = "0.1.10"
tokio-io = "^0.1"
tokio-timer = "^0.1"
url = "^1.6"
