[package]
name = "schani_processor"
version = "0.2.0"
authors = ["Christoph Wurst <christoph@winzerhof-wurst.at>"]

[dependencies]
dotenv = "0.11.0"
env_logger = "0.4.3"
futures = "0.1.17"
hyper = "^0.11"
lapin-futures = "0.11.1"
log = "0.4.1"
schani_library_client = { git = "https://github.com/schani-rs/schani_library_client.git" }
schani_store_client = { git = "https://github.com/schani-rs/schani_store_client.git" }
temporary = "0.6.3"
tokio-core = "0.1.10"
tokio-io = "^0.1"
tokio-timer = "^0.2"
url = "^1.6"
